Phase 9: Fixed build errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(Threads REQUIRED)
 
 include_directories(include)
-add_executable(server src/main.cpp src/server.cpp src/request.cpp src/response.cpp src/router.cpp src/logger.cpp)
+add_executable(server src/main.cpp src/server.cpp src/request.cpp src/response.cpp src/router.cpp src/logger.cpp src/metrics.cpp)
 
 target_link_libraries(server PRIVATE Threads::Threads)
